# libtime

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  NEWS  POSIX_epoch.c  README  README.md  aclocal.m4  avoid_time_t.tex  avoid_time_t.tex.in  build_RPMs.sh  building_on_copr.txt  check_time.c  check_time_expected_output.txt  config.h.in  configure  configure.ac  demo_python.py  example_02.c  example_03.c  example_04.c  example_05.c  fix_files.sh  int128_to_string.c  libtime-2019.12.02-1.fc31.src.rpm  libtime-2019.12.06-1.fc31.src.rpm  libtime-2019.12.13-1.fc31.src.rpm  libtime-2019.12.14-1.fc31.src.rpm  libtime-2019.12.20-1.fc31.src.rpm  libtime-2020.01.02-1.fc31.src.rpm  libtime-2020.01.11-1.fc31.src.rpm  libtime-2020.01.25-1.fc31.src.rpm  libtime-2020.01.31-1.fc31.src.rpm  libtime-2020.02.15-1.fc31.src.rpm  libtime-2020.02.21-1.fc32.src.rpm  libtime-2020.03.20-1.fc32.src.rpm  libtime-2020.04.03-1.fc31.src.rpm  libtime-2020.04.10-1.fc31.src.rpm  libtime-2020.04.14-1.fc31.src.rpm  (+413 more)
autom4te.cache/: output.0  requests  traces.0  traces.1
examples/: example_02.c  example_03.c  example_04.c  example_05.c  example_06.py  example_07.py
src/: int128_to_string.c  time_current_tm.c  time_current_tm_nano.c  time_diff.c  time_length.c  time_local_normalize.c  time_local_to_utc.c  time_sleep_until.c  time_subroutines.h  time_test_for_disabled_adjtimex.c  time_utc_to_local.c
tests/: POSIX_epoch.c  demo_python.py  powers_of_two.c  print_DTAI.c  sleep_until_midnight.c  test_JDN.c  test_add.c  test_diff.c  test_ep.c  test_for_disabled_adjtimex.c  test_local.c  test_python_interface.py  test_time.c
